--- a/unsubscribe/index.html
+++ b/unsubscribe/index.html
@@ -236,6 +236,7 @@ scJsHost+
 
 
 <br>
+<iframe id="hidden_iframe" name="hidden_iframe" onload="if(submitted) {window.location='//weightloss.peerooz.com/unsubscribe/unsubscribed.html';}" style="display: none;"></iframe>
 	
 	<form action="https://docs.google.com/forms/d/e/1FAIpQLSfw8YUvV3oihtoGGqhnb_YL2Goi8CMvhcp5URzC67dDr3RVYg/formResponse" method="post" onsubmit="submitted=true;" target="hidden_iframe">
 
