--- a/unsubscribe/index.html
+++ b/unsubscribe/index.html
@@ -224,16 +224,13 @@ scJsHost+
 <div class="form_Fmiddle">
 <div class="form_text_FtOP">Unsubscription Form 
 	</div>  
-<div class="form_text_Fmiddle_2">To Unsubscribe From Lifestyle Tips please enter<br />
+<div class="form_text_Fmiddle_2">To Unsubscribe From Lifestyle Tips List, please enter<br />
   <span class="Fbold"> Your Email Address </span>To The Form Below & Click Unsubscribe <br /></div>
 </div>
 <div class="form_Fbottom">
 <div class="form_Fmain">
   
 <script type="text/javascript">var submitted=false;</script>
-
-<iframe id="hidden_iframe" name="hidden_iframe" onload="if(submitted) {window.location='//weightloss.peerooz.com/thank-you/thank-you.html';}" style="display: none;"></iframe>
-
 
 <br>
 <iframe id="hidden_iframe" name="hidden_iframe" onload="if(submitted) {window.location='//weightloss.peerooz.com/unsubscribe/unsubscribed.html';}" style="display: none;"></iframe>
