--- a/unsubscribe/index.html
+++ b/unsubscribe/index.html
@@ -25,9 +25,9 @@ scJsHost+
 	.content_Unsubscribe {
 	margin: 0px;
 	float: left;
-	width: 535px;
-	padding-left: 5px;
-		 background-color: #1a64b0;
+	width: auto;
+	padding: 20px;
+	background-color: #1a64b0;
 
 }
 	
@@ -35,19 +35,19 @@ scJsHost+
 	margin: 0px;
 	padding: 0px;
 	height: 175px;
-	width: 535px;
+	width: auto;
 }
 .form_UnsubsMiddle {
 	margin: 0px;
 	padding: 0px;
 	height: 155px;
-	width: 535px;
+	width: auto;
 }
 .form_UnsubsBottom {
 	margin: 0px;
 	padding: 0px;
 	height: 177px;
-	width: 535px;
+	width: auto;
 }
 	
 .form_text_UnsubsTop {
