--- a/unsubscribe/index.html
+++ b/unsubscribe/index.html
@@ -45,7 +45,7 @@ scJsHost+
 	
 }
 .form_UnsubsBottom {
-	margin: 20px;
+	margin: 10px;
 	padding: 0px;
 	height: 177px;
 	width: auto;
@@ -272,7 +272,7 @@ scJsHost+
 <div class="form_UnsubsTop">
 	
 <div class="form_UnsubsMiddle">
-<div class="form_text_UnsubsTop">Unsubscription Form 
+<div class="form_text_UnsubsTop">Unsubscription Form <br /> 
 	</div> 
 	
 <div class="form_text_Fmiddle_2"> We are sorry, that you wish to unsubscribe from the <br />LifeStyle Tips & Offer list, but we'll try our best next time to <br />send you interesting and helpful information.<br /> <br />
