--- a/unsubscribe/index.html
+++ b/unsubscribe/index.html
@@ -266,8 +266,8 @@ scJsHost+
 <div class="form_text_Fmiddle_2"> We are sorry, that you wish to unsubscribe from the <br />LifeStyle Tips & Offer list, but we'll try our best next time to <br />send you interesting and helpful information.<br /> <br />
 	
 
-	To Unsubscribe From Lifestyle Tips List, please enter
-  <span class="Fbold"> The Exact Email Address You Signed up For Our List </span>To The Form Below & Click Unsubscribe <br /></div>
+	To Unsubscribe From Lifestyle Tips List, please enter<br />
+  <span class="Fbold"> Your Name & The Exact Email Address When You Signed up </span>To The Form Below & Click Unsubscribe. <br /></div>
 	
 	
 	</div>
