--- a/unsubscribe/index.html
+++ b/unsubscribe/index.html
@@ -65,7 +65,9 @@ scJsHost+
 	line-height: 26px;
 }		
 	
-
+hr.NewLine {
+  border-top: 2px dashed yellow;
+}
 	
 	
 	.form_Ftop {
@@ -263,8 +265,9 @@ scJsHost+
 <div class="form_text_UnsubsTop">Unsubscription Form <br /> 
 	</div> 
 	
-<div class="form_text_Fmiddle_2"> We are sorry, that you wish to unsubscribe from the <br />LifeStyle Tips & Offer list, but we'll try our best next time to <br />send you interesting and helpful information.<br /> <br />
+<div class="form_text_Fmiddle_2"> We are sorry, that you wish to unsubscribe from the <br />LifeStyle Tips & Offer list, but we'll try our best next time to <br />send you interesting and helpful information.<br /> 
 	
+	<hr class="NewLine"><br />
 
 	To Unsubscribe From Lifestyle Tips List, please enter<br />
   <span class="Fbold"> Your Name & The Exact Email Address When You Signed up </span>To The Form Below & Click Unsubscribe. <br /></div>
@@ -327,7 +330,7 @@ scJsHost+
 				 
 				 <input name="entry.887873799" type="text" class="field_Femail" onfocus="if(this.value == '*Enter Your Email Address'){ this.value = ''; this.style.color= '#1a1a1a'; }" onblur="if(this.value == ''){ this.value = '*Enter Your Email Address'; this.style.color= '#818181'; }" value="*Enter Your Email Address"><br>
 				 
-				 <input name="Submit" type="submit" class="Fsubmit" value="AA-Submit"></form>
+				 <input name="Submit" type="submit" class="Fsubmit" value="Unsubscribe"></form>
 	
 	
 	
