--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@ scJsHost+
 		});
 		jQuery('.avatar').attr('style', 'min-width: unset; min-height: unset;');
 	});
-		</script><link rel="shortcut icon" href="https://weightloss.peerooz.com/wlfavi.ico" type="image/x-icon"><style type="text/css" id="wp-custom-css">
+		</script>
+		<link rel="shortcut icon" href="favicon.ico?v=2" type="image/x-icon" />
+		<style type="text/css" id="wp-custom-css">
 			.content_Fright {
 	margin: 0px;
 	float: left;
