thank you page title update

--- a/thankyou/thank-you.html
+++ b/thankyou/thank-you.html
@@ -18,7 +18,7 @@ scJsHost+
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
   gtag('config', 'UA-163350916-1');
-</script><title>Privacy Policy & Disclaimer – Weight Loss</title>
+</script><title>Thank You For Subscribing – Weight Loss</title>
 <link rel="dns-prefetch" href="//s.w.org">
 <link rel="stylesheet" id="wp-block-library-css" href="https://weightloss.peerooz.com/wp-includes/css/dist/block-library/style.min.css" type="text/css" media="all">
 <script type="text/javascript" src="https://weightloss.peerooz.com/wp-includes/js/jquery/jquery.js"></script>
