update-to-newNetlify

--- a/feed/index.html
+++ b/feed/index.html
@@ -9,7 +9,7 @@
 
 <channel>
 	<title>Weight Loss</title>
-	<atom:link href="https://weightloss.peerooz.com/feed/" rel="self" type="application/rss+xml" />
+	<atom:link href="https://weightlosstips.netlify.app/feed/" rel="self" type="application/rss+xml" />
 	<link>http://weightloss.peerooz.com/</link>
 	<description>The Best Way To Lose Weight</description>
 	<lastBuildDate>Thu, 18 Jun 2020 20:42:24 +0000</lastBuildDate>
@@ -21,62 +21,62 @@
 	
 	<item>
 		<title>5 Simple Steps to Losing Weight</title>
-		<link>https://weightloss.peerooz.com/5-simple-steps-to-losing-weight/</link>
+		<link>https://weightlosstips.netlify.app/5-simple-steps-to-losing-weight/</link>
 				<pubDate>Fri, 01 May 2020 20:42:44 +0000</pubDate>
 		<dc:creator><![CDATA[manou]]></dc:creator>
 				<category><![CDATA[Weight Loss]]></category>
 
-		<guid isPermaLink="false">https://weightloss.peerooz.com/?p=381</guid>
+		<guid isPermaLink="false">https://weightlosstips.netlify.app/?p=381</guid>
 				<description><![CDATA[Losing weight and keeping it off, so if you have some extra fat just like many people, all of you know all the reasons why we should drop some weight. It will reduce the stress on our heart, decreasing the opportunity of coronary illness, malignant growth, probability of diabetes; feel much better, look progressively appealing,]]></description>
 									</item>
 		<item>
 		<title>5 Super Simple Weight Loss Tips</title>
-		<link>https://weightloss.peerooz.com/5-super-simple-weight-loss-tips/</link>
+		<link>https://weightlosstips.netlify.app/5-super-simple-weight-loss-tips/</link>
 				<pubDate>Sat, 18 Apr 2020 20:48:55 +0000</pubDate>
 		<dc:creator><![CDATA[manou]]></dc:creator>
 				<category><![CDATA[Weight Loss]]></category>
 
-		<guid isPermaLink="false">https://weightloss.peerooz.com/?p=383</guid>
+		<guid isPermaLink="false">https://weightlosstips.netlify.app/?p=383</guid>
 				<description><![CDATA[Weight loss tips These days losing weight is one of those subjects that everybody is continually discussing. It appears you can&#8217;t go anyplace without seeing or hearing some kind of weight reduction message. Accounts of the perils of not getting the thinner show up routinely on the evening news. Retail outlets and the Internet both]]></description>
 									</item>
 		<item>
 		<title>Avoid Dieting Make Positive Changes Instead</title>
-		<link>https://weightloss.peerooz.com/avoid-dieting-make-positive-changes-instead/</link>
+		<link>https://weightlosstips.netlify.app/avoid-dieting-make-positive-changes-instead/</link>
 				<pubDate>Thu, 09 Apr 2020 18:58:19 +0000</pubDate>
 		<dc:creator><![CDATA[manou]]></dc:creator>
 				<category><![CDATA[Weight Loss]]></category>
 
-		<guid isPermaLink="false">https://weightloss.peerooz.com/?p=259</guid>
+		<guid isPermaLink="false">https://weightlosstips.netlify.app/?p=259</guid>
 				<description><![CDATA[Losing Weight By Diet How can it be that only saying the &#8220;D&#8221; word, you know &#8220;diet&#8221; brings immediate thoughts of failure to the minds of many people around the globe. Could it be that we have been told that diets simply do not work? Might it be able to be that we have all]]></description>
 									</item>
 		<item>
 		<title>Cross Training for Fitness and Fatloss</title>
-		<link>https://weightloss.peerooz.com/cross-training-for-fitness-and-fatloss/</link>
+		<link>https://weightlosstips.netlify.app/cross-training-for-fitness-and-fatloss/</link>
 				<pubDate>Sun, 05 Apr 2020 09:02:05 +0000</pubDate>
 		<dc:creator><![CDATA[manou]]></dc:creator>
 				<category><![CDATA[Weight Loss]]></category>
 
-		<guid isPermaLink="false">https://weightloss.peerooz.com/?p=106</guid>
+		<guid isPermaLink="false">https://weightlosstips.netlify.app/?p=106</guid>
 				<description><![CDATA[The numbers on your scale don&#8217;t show whether you are fit or fat. Unmistakably more noteworthy than your absolute body weight is the arrangement of your body tissue. On the off chance that a man&#8217;s fatty tissue is greater than 14% up to 15% of his weight, or if a lady&#8217;s fatty tissue is over]]></description>
 									</item>
 		<item>
 		<title>Benefits of Stretching</title>
-		<link>https://weightloss.peerooz.com/benefits-of-stretching/</link>
+		<link>https://weightlosstips.netlify.app/benefits-of-stretching/</link>
 				<pubDate>Sun, 29 Mar 2020 08:53:00 +0000</pubDate>
 		<dc:creator><![CDATA[manou]]></dc:creator>
 				<category><![CDATA[Weight Loss]]></category>
 
-		<guid isPermaLink="false">https://weightloss.peerooz.com/?p=100</guid>
+		<guid isPermaLink="false">https://weightlosstips.netlify.app/?p=100</guid>
 				<description><![CDATA[The body is adaptable. It should be adaptable. You should have the option to curve and arrive at that something you dropped on the floor. You should have the option to zip the rear of your preferred dress all alone. You should have the option to arrive at that book you have to peruse at]]></description>
 									</item>
 		<item>
 		<title>Dieting and Fitness</title>
-		<link>https://weightloss.peerooz.com/dieting-and-fitness/</link>
+		<link>https://weightlosstips.netlify.app/dieting-and-fitness/</link>
 				<pubDate>Sat, 14 Mar 2020 09:12:08 +0000</pubDate>
 		<dc:creator><![CDATA[manou]]></dc:creator>
 				<category><![CDATA[Weight Loss]]></category>
 
-		<guid isPermaLink="false">https://weightloss.peerooz.com/?p=120</guid>
+		<guid isPermaLink="false">https://weightlosstips.netlify.app/?p=120</guid>
 				<description><![CDATA[Diet For Fitness With regards to carrying on with long and sound life, there are two essential fixings: diet for fitness and wellness. While some accept that they are one thing all together, nothing could be further from reality. It is very conceivable to have a fit as a fiddle diet with unfortunate wellness propensities.]]></description>
 									</item>
 	</channel>
