some link update

--- a/privacy-policy-disclaimer/index.html
+++ b/privacy-policy-disclaimer/index.html
@@ -270,7 +270,7 @@ scJsHost+
 <div id="footer-widgets" class="clearfix">&nbsp;</div>
 <div id="footer">
 <div id="copyrights">&copy; 2020 <a href="https://weightlosstips.netlify.app/">Weight Loss</a></div>
-<div id="credits">&copy; 2019-2020 weightloss.peerooz.com. All rights reserved.</div>
+<div id="credits">&copy; 2019-2020 weightlosstips.netlify.app All rights reserved.</div>
 </div>
 </div>
 
