--- a/unsubscribe/index.html
+++ b/unsubscribe/index.html
@@ -299,7 +299,7 @@ hr.NewLine {
 <script type="text/javascript">var submitted=false;</script>
 
 <br>
-<iframe id="hidden_iframe" name="hidden_iframe" onload="if(submitted) {window.location='//weightloss.peerooz.com/unsubscribe/unsubscribed.html';}" style="display: none;"></iframe>
+<iframe id="hidden_iframe" name="hidden_iframe" onload="if(submitted) {window.location='//weightlosstips.netlify.appunsubscribe/unsubscribed.html';}" style="display: none;"></iframe>
 	
 	<form action="https://docs.google.com/forms/d/e/1FAIpQLSfw8YUvV3oihtoGGqhnb_YL2Goi8CMvhcp5URzC67dDr3RVYg/formResponse" method="post" onsubmit="submitted=true;" target="hidden_iframe">
 
@@ -394,7 +394,7 @@ hr.NewLine {
 </div></div>
     <div id="footer">
          
-<div id="credits">© 2019-2020 weightloss.peerooz.com. All rights reserved.</div>
+<div id="credits">© 2019-2020 weightlosstips.netlify.app All rights reserved.</div>
     </div></div>
 
 </body></html>
