--- a/unsubscribe/unsubscribed.html
+++ b/unsubscribe/unsubscribed.html
@@ -250,7 +250,7 @@ scJsHost+
         <div id="copyrights">
              © 2020  <a href="https://weightlosstips.netlify.app/">Weight Loss</a> 
         </div>  
-<div id="credits">© 2019-2020 weightloss.peerooz.com. All rights reserved.</div>
+<div id="credits">© 2019-2020 weightlosstips.netlify.app All rights reserved.</div>
     </div></div>
 
  </body></html>
