--- a/weightloss/thankyou/thank-you.html
+++ b/weightloss/thankyou/thank-you.html
@@ -256,7 +256,7 @@ scJsHost+
         <div id="copyrights">
              © 2020  <a href="https://weightlosstips.netlify.app/">Weight Loss</a> 
         </div>  
-<div id="credits">© 2019-2020 weightloss.peerooz.com. All rights reserved.</div>
+<div id="credits">© 2019-2020 weightlosstips.netlify.app All rights reserved.</div>
     </div></div>
 
 <script type="text/javascript" src="https://weightlosstips.netlify.app/wp-includes/js/hoverIntent.min.js"></script><script type="text/javascript">
