--- a/signup/index.html
+++ b/signup/index.html
@@ -1,81 +1,85 @@
-<html>
-<body>
-
-
-<div class="form-box">
-<div class="form-title">
-<h1>
-Exercise Without Effort<br>E-book Valued $9.99 <br>"GET IT FREE"</h1><br>
- 
-<h3>
-Simply Enter Your First Name &amp; Primary Email Address To The Form Below &amp; Click Submit:</h3>
+<form id="mG61Hd" action="https://docs.google.com/forms/u/0/d/e/1FAIpQLScWWK7M4XPXcZmTHGAoxzPR6zIKCQtk2iH40SQzQHLUSVw1UA/formResponse" method="POST" target="_self" data-response="%.@.[]]" data-first-entry="0" data-last-entry="1" data-is-first-page="true">
+<div>
+<div>&nbsp;</div>
 </div>
-<div class="form-inside">
-<script type="text/javascript">var submitted=false;</script>
-<iframe id="hidden_iframe" name="hidden_iframe" onload="if(submitted) {window.location='thank-you.html';}" style="display: none;"></iframe>
-
-
-<!-- Update the Google forms URL in action-->
-    <br>
-<form action="https://docs.google.com/forms/d/e/1FAIpQLScWWK7M4XPXcZmTHGAoxzPR6zIKCQtk2iH40SQzQHLUSVw1UA/formResponse" method="post" onsubmit="submitted=true;" target="hidden_iframe">
-
-
-<!-- This is the code for Name and Email valdiation, that people type good  email and name, Take this line out when uploading -->
-<script type="text/javascript">
-    function validateName() {
-            var name = document.getElementById('name').value;
-            if(name.length == 0) {
-              alert("Name can't be blank") ;
-              return false;
-            }
-            if (!name.match(/^[a-zA-Z]{3,}(?: [a-zA-Z]+){0,2}$/)) {
-              alert("Please enter your correct name") ;//Validation Message
-              return false;
-            }
-            return true;
-          }
- 
-         function validateEmail () {
-          var email = document.getElementById('email').value;
-          if(email.length == 0) {
-            alert("Email can't be blank") ;//Validation Message
-            return false;
-          }
-          if(!email.match(/^[A-Za-z\._\-[0-9]*[@][A-Za-z]*[\.][a-z]{2,4}$/)) {
-            alert("Please enter a correct email address") ;//Validation Message
-            return false;
-
-          }
-          return true;
-
-        }
-        function validateForm() {
-          if (!validateName() || !validateEmail()) {
-
-            alert("Form not submitted");//Validation Message
-            return false;
-          }
-          else {
-            submitted=true;
-            return true;
-          }
-        }
-         </script>
-
-<!-- End Contact Section -->
-
-<br>
- 
-<label></label>
-        <input class="input-box" id="name" name="entry.1008071450" placeholder="Your Name" required="" type="text">  <br><br>
-  
-<label></label>
-        <input class="input-box" id="email" name="entry.2013074346" placeholder="Your Email" required="" type="text"> 
-        <button class="buttongr" type="submit">SUBMIT</button>
+<div class="freebirdFormviewerViewFormCard exportFormCard">
+<div class="freebirdFormviewerViewFormContent">
+<div class="freebirdFormviewerViewNoPadding">
+<div class="freebirdFormviewerViewHeaderHeader exportHeader">
+<div class="freebirdFormviewerViewHeaderThemeStripe freebirdSolidBackground exportThemeStripe">&nbsp;</div>
+<div class="freebirdFormviewerViewHeaderTitleRow">
+<div class="freebirdFormviewerViewHeaderTitle exportFormTitle freebirdCustomFont" dir="auto" role="heading" aria-level="1">Test-SignupEbook</div>
+</div>
+<div class="freebirdCommonViewSecurequizSecureQuizBannerContainer">&nbsp;</div>
+<div class="freebirdFormviewerViewHeaderEmailAndSaveStatusContainer">&nbsp;</div>
+<div class="freebirdFormviewerViewHeaderRequiredLegend" dir="auto" aria-hidden="true">* Required</div>
+</div>
+</div>
+<div class="freebirdFormviewerViewItemList" role="list">
+<div role="listitem">
+<div class="freebirdFormviewerComponentsQuestionBaseRoot freebirdFormviewerComponentsQuestionTextRoot freebirdFormviewerViewEmailCollectionField">
+<div>
+<div class="freebirdFormviewerComponentsQuestionBaseHeader">
+<div class="freebirdFormviewerComponentsQuestionBaseTitle exportItemTitle freebirdCustomFont" dir="auto" role="heading" aria-level="3">Email address<span id="i4" class="freebirdFormviewerComponentsQuestionBaseRequiredAsterisk" aria-label="Required question"> *</span></div>
+</div>
+<div class="quantumWizTextinputPaperinputEl freebirdFormviewerComponentsQuestionTextShort freebirdFormviewerComponentsQuestionTextTextInput freebirdThemedInput modeLight isDisabled" aria-disabled="true">
+<div class="quantumWizTextinputPaperinputMainContent exportContent">
+<div class="quantumWizTextinputPaperinputContentArea exportContentArea">
+<div class="quantumWizTextinputPaperinputInputArea"><input class="quantumWizTextinputPaperinputInput exportInput" dir="auto" tabindex="0" autocomplete="email" disabled="disabled" required="" type="email" aria-label="Your email" data-initial-dir="auto" data-initial-value="" />
+<div class="quantumWizTextinputPaperinputPlaceholder exportLabel" aria-hidden="true">Your email</div>
+</div>
+<div class="quantumWizTextinputPaperinputUnderline exportUnderline">&nbsp;</div>
+<div class="quantumWizTextinputPaperinputFocusUnderline exportFocusUnderline">&nbsp;</div>
+</div>
+</div>
+<div class="quantumWizTextinputPaperinputCounterErrorHolder">
+<div class="quantumWizTextinputPaperinputHint exportHint">&nbsp;</div>
+</div>
+</div>
+</div>
+<div id="i3" class="freebirdFormviewerComponentsQuestionBaseValidationError" role="alert">&nbsp;</div>
+</div>
+</div>
+<div class="freebirdFormviewerViewNumberedItemContainer" role="listitem">
+<div class="m2" data-params="%.@.[2013074346,&quot;Name&quot;,null,0,[[1008071450,[],true,[],[],null,null,null,null,null,[null,[]]]],null,null,null,[]],&quot;i5&quot;,&quot;i6&quot;,&quot;i7&quot;,false]">
+<div class="freebirdFormviewerComponentsQuestionBaseRoot">
+<div class="freebirdFormviewerComponentsQuestionBaseHeader">
+<div class="freebirdFormviewerComponentsQuestionBaseTitleDescContainer">
+<div id="i5" class="freebirdFormviewerComponentsQuestionBaseTitle exportItemTitle freebirdCustomFont" role="heading" aria-level="3" aria-describedby="i8">Name<span id="i8" class="freebirdFormviewerComponentsQuestionBaseRequiredAsterisk" aria-label="Required question"> *</span></div>
+<div id="i6" class="freebirdFormviewerComponentsQuestionBaseDescription">&nbsp;</div>
+</div>
+</div>
+<div class="freebirdFormviewerComponentsQuestionTextRoot">
+<div class="quantumWizTextinputPaperinputEl freebirdFormviewerComponentsQuestionTextShort freebirdFormviewerComponentsQuestionTextTextInput freebirdThemedInput modeLight isDisabled" aria-disabled="true">
+<div class="quantumWizTextinputPaperinputMainContent exportContent">
+<div class="quantumWizTextinputPaperinputContentArea exportContentArea">
+<div class="quantumWizTextinputPaperinputInputArea"><input class="quantumWizTextinputPaperinputInput exportInput" dir="auto" tabindex="0" autocomplete="off" disabled="disabled" required="" type="text" aria-labelledby="i5" aria-describedby="i6 i7" data-initial-dir="auto" data-initial-value="" />
+<div class="quantumWizTextinputPaperinputPlaceholder exportLabel" aria-hidden="true">Your answer</div>
+</div>
+<div class="quantumWizTextinputPaperinputUnderline exportUnderline">&nbsp;</div>
+<div class="quantumWizTextinputPaperinputFocusUnderline exportFocusUnderline">&nbsp;</div>
+</div>
+</div>
+<div class="quantumWizTextinputPaperinputCounterErrorHolder">
+<div class="quantumWizTextinputPaperinputHint exportHint">&nbsp;</div>
+</div>
+</div>
+</div>
+<div id="i7" class="freebirdFormviewerComponentsQuestionBaseValidationError" role="alert">&nbsp;</div>
+</div>
+</div>
+</div>
+</div>
+<div class="freebirdFormviewerViewNavigationNavControls" data-shuffle-seed="-7438609161920672409" data-should-execute-invisible-captcha-challenge="false" data-is-receipt-checked="false">
+<div class="freebirdFormviewerViewNavigationButtonsAndProgress">
+<div class="freebirdFormviewerViewNavigationLeftButtons">
+<div class="appsMaterialWizButtonEl appsMaterialWizButtonPaperbuttonEl appsMaterialWizButtonPaperbuttonFilled freebirdFormviewerViewNavigationSubmitButton freebirdThemedFilledButtonM2" tabindex="0" role="button" aria-disabled="false">
+<div class="appsMaterialWizButtonPaperbuttonRipple exportInk">&nbsp;</div>
+<div class="appsMaterialWizButtonPaperbuttonFocusOverlay exportOverlay">&nbsp;</div>
+<span class="appsMaterialWizButtonPaperbuttonContent exportButtonContent"><span class="appsMaterialWizButtonPaperbuttonLabel quantumWizButtonPaperbuttonLabel exportLabel">Submit</span></span></div>
+</div>
+</div>
+</div>
+</div>
+</div>
 </form>
-
-<!-- End Contact Section -->
-</div>
-				 </div>
-				 
-				 </body></html>
