--- a/signup/index.html
+++ b/signup/index.html
@@ -58,7 +58,7 @@
             <div class="row">
                 <div class="col-md-12">
                         <div class="tab-pane fade show active text-align form-new" id="home" role="tabpanel" aria-labelledby="home-tab">
-                            <h3 class="register-heading">Connect Google Spreadsheet to HTML</h3>
+                            <h3 class="register-heading">Weight Loss Newsletter</h3>
                             <div class="row register-form">
                                 <div class="col-md-12">
                                     <form method="post" autocomplete="off" name="google-sheet">
@@ -82,7 +82,7 @@
           
           <script>
           const scriptURL = 'https://script.google.com/macros/s/AKfycbyEfdFq5KR8rKQhsAaOmubDmNiC9AdnYeEfDvDFJ-DgvTTfP-HXWERt7k4Fydqrk46k/exec'
-            const form = document.forms['google-sheet']
+            const form = document.forms['submit-to-google-sheet']
           
             form.addEventListener('submit', e => {
               e.preventDefault()
