--- a/signup/index.html
+++ b/signup/index.html
@@ -82,7 +82,7 @@
           
           <script>
           const scriptURL = 'https://script.google.com/macros/s/AKfycbyEfdFq5KR8rKQhsAaOmubDmNiC9AdnYeEfDvDFJ-DgvTTfP-HXWERt7k4Fydqrk46k/exec'
-            const form = document.forms['sign-up-form']
+            const form = document.forms['google-sheet']
           
             form.addEventListener('submit', e => {
               e.preventDefault()
