--- a/signup/form.html
+++ b/signup/form.html
@@ -64,10 +64,10 @@
                                 <div class="col-md-12">
                                     <form method="post" autocomplete="off" name="google-sheet">
                                         <div class="form-group">
-                                            <input type="text" name="Name" class="form-control" placeholder="Your Name *" value="" required=""/>
+                                            <input type="text" name="name" class="form-control" placeholder="Your Name *" value="" required=""/>
                                         </div>
                                         <div class="form-group">
-                                            <input type="text" name="Email" class="form-control" placeholder="Your Email *" value="" required=""/>
+                                            <input type="text" name="email" class="form-control" placeholder="Your Email *" value="" required=""/>
                                         </div>
                                         
                                         <div class="form-group">
