--- a/signup/form2.html
+++ b/signup/form2.html
@@ -30,15 +30,9 @@ action="https://script.google.com/macros/s/AKfycbzRaiJpGPRFTsoxSuMfGt2yg5Bvwui2m
 </fieldset>
 
 <fieldset class="pure-group">
-<label for="name">Email</label>
+<label for="email">Email</label>
 <input id="email" name="email" placeholder="Your email here" />
 </fieldset>
-
-<fieldset class="pure-group">
-<label for="answer">What's 2 + 2?</label>
-<input id="answer" name="answer" placeholder="Answer" />
-</fieldset>
-
 
 <br>
 <button class="button-success pure-button button-xlarge">Submit!</button>
