--- a/signup/form2.html
+++ b/signup/form2.html
@@ -26,12 +26,12 @@ action="https://script.google.com/macros/s/AKfycbzRaiJpGPRFTsoxSuMfGt2yg5Bvwui2m
 
 <fieldset class="pure-group">
 <label for="name">Name</label>
-<input id="name" name="name" placeholder="Your name here" />
+<input id="name" name="name" type="text" placeholder="Your name here..." />
 </fieldset>
 
 <fieldset class="pure-group">
 <label for="email">Email</label>
-<input id="email" name="email" placeholder="Your email here" />
+<input id="email" name="email" type="email" placeholder="Your email here..." />
 </fieldset>
 
 <br>
