--- a/signup/form2.html
+++ b/signup/form2.html
@@ -18,8 +18,10 @@
 <body>
 <h2>To signup Fill out the form below</h2>
 
-<form class="gform pure-form pure-form-stacked" method="POST" data-email=""
-action="https://script.google.com/macros/s/AKfycbzRaiJpGPRFTsoxSuMfGt2yg5Bvwui2m0EKl53jPAjc6Dxd-Z_59j02YtKQGauNAQ/exec">
+<!-- <form class="gform pure-form pure-form-stacked" method="POST" -->
+
+<form class="gform" method="POST"
+action="https://script.google.com/macros/s/AKfycbzRaiJpGPRFTsoxSuMfGt2yg5Bvwui2m0EKl53jPAjc6Dxd-Z_59j02YtKQGauNAQ/exec" autocomplete="off">
 
 <!-- change the form action to your script url -->
 <div class="form-elements">
