--- a/signup/form2.html
+++ b/signup/form2.html
@@ -20,8 +20,8 @@
 
 <!-- <form class="gform pure-form pure-form-stacked" method="POST" -->
 
-<form class="gform" method="POST"
-action="https://script.google.com/macros/s/AKfycbyW4W_ZQOrYu3YWcwJWOmPhvRGoR6QRlMIYjkaa65l-Gn3i1rCB9A0EB71qhK4P7nmN/exec" autocomplete="off">
+<form class="gform pure-form pure-form-stacked" method="POST"
+action="https://script.google.com/macros/s/AKfycbyW4W_ZQOrYu3YWcwJWOmPhvRGoR6QRlMIYjkaa65l-Gn3i1rCB9A0EB71qhK4P7nmN/exec">
 
 <!-- change the form action to your script url -->
 <div class="form-elements">
