--- a/signup/form3.html
+++ b/signup/form3.html
@@ -23,7 +23,7 @@
    <!-- Style The Contact Form How Ever You Prefer -->
    <link rel="stylesheet" href="style.css">
 
-  <form class="gform pure-form pure-form-stacked" method="POST" data-email="example@email.net"
+  <form class="gform pure-form pure-form-stacked" method="POST"
   action="https://script.google.com/macros/s/AKfycbxKJaFa09z4YpF5Farl2IiyXBGzbXrJMCPXG4SwAZWaFZudBcO2bkfmgzTqyuq7e0MsXQ/exec">
     <!-- change the form action to your script url -->
 
