--- a/signup/form3.html
+++ b/signup/form3.html
@@ -33,7 +33,11 @@
         <input id="name" name="name" placeholder="What your Mom calls you" />
       </fieldset>
 
-     
+      <fieldset class="pure-group">
+        <label for="message">Message: </label>
+        <textarea id="message" name="message" rows="10"
+        placeholder="Tell us what's on your mind..."></textarea>
+      </fieldset>
 
       <fieldset class="pure-group">
         <label for="email"><em>Your</em> Email Address:</label>
@@ -41,7 +45,10 @@
         required placeholder="your.name@email.com"/>
       </fieldset>
 
-     
+      <fieldset class="pure-group">
+        <label for="color">Favourite Color: </label>
+        <input id="color" name="color" placeholder="green" />
+      </fieldset>
 
       <fieldset class="pure-group honeypot-field">
         <label for="honeypot">To help avoid spam, utilize a Honeypot technique with a hidden text field; must be empty to submit the form! Otherwise, we assume the user is a spam bot.</label>
